Prevent images in comments in the sidebar box from becoming too large

--- a/wcfsetup/install/files/style/ui/comment.scss
+++ b/wcfsetup/install/files/style/ui/comment.scss
@@ -256,3 +256,11 @@
 .commentModerationDisabledComment {
 	margin: 0 -20px;
 }
+
+/* Prevent images in comments in the sidebar box from becoming too large */
+.sidebarCommentContent {
+	img {
+		max-width: 100%;
+		max-height: 300px;
+	}
+}
